[package]
name = "learnRust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.dev]
opt-level = 1

[dependencies]
libc = "0.2.139"
nix = "0.26.2"
rand = "0.8.5"
common_lib = {path= "common_lib" }


[workspace]
members = [
    "thread_safe",
    "axum_web",
    "common_lib",
    "macros",
    "guess"
]
